Fix nav bar on small screen broken from last commit

--- a/styles/nav.less
+++ b/styles/nav.less
@@ -42,7 +42,11 @@ header {
             margin-right: 0;
             padding-right: 0;
             transform: skew(0deg);
-            flex-flow: row;
+
+            ul {
+                display: flex;
+                flex-flow: row;
+            }
         }
 
         li {
